--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,21 @@
-title: Long Haul
-description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
-
-url: http://brianmaierjr.github.com/long-haul
-baseurl: ""
-paginate_path: "blog/page:num/"
-permalink: blog/:title/
-
-markdown: redcarpet
-highlighter: pygments
+title:            How nice!
+description:      Mu-An Chiou. Designer and front-end developer living in London. I am very nice.
+url:              http://muan.co
+permalink:        pretty
+highlighter:      pygments
+markdown:         rdiscount
+folder:           stuff
+rdiscount:
+  extensions:     [smart]
+google_analytics: UA-21332781-7
+timezone:         Europe/London
 paginate: 5
-
-navigation:
- - title: Home
-   url: /index.html
- - title: About
-   url: /about
- - title: Contact
-   url: /contact
-
-social:
-   github: brianmaierjr
-   twitter: brianmaierjr
-   facebook: brianmaierjr
-   email: brimaidesigns@gmail.com
-
-google_analytics: "UA-58263416-1"
+links: 
+  - name:         About
+    url:          /about
+  - name:         GitHub
+    url:          http://github.com/muan
+  - name:         Twitter
+    url:          http://twitter.com/muanchiou
+  - name:         Instagram
+    url:          http://instagram.com/muanchiou
