--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ links:
   - name:         About
     url:          /about
   - name:         GitHub
-    url:          http://github.com/muan
+    url:          http://github.com/pli88
   - name:         Twitter
-    url:          http://twitter.com/muanchiou
-  - name:         Instagram
-    url:          http://instagram.com/muanchiou
+    url:          http://twitter.com/pli88
+#   - name:         Instagram
+#     url:          http://instagram.com/muanchiou
